fix(toolbar): can't wrap onto multiple lines

--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -6,6 +6,7 @@
   border: 1px solid var(--border-color);
   border-bottom: 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 .lake-toolbar .lake-toolbar-button {
